--- a/production.cfg.example
+++ b/production.cfg.example
@@ -4,3 +4,6 @@ TESTING=False
 ENV='production'
 HOST='0.0.0.0'
 PORT='8080'
+TOKENINFO_URL='http://172.31.0.1:8080/oauth2/tokeninfo'
+SQLALCHEMY_DATABASE_URI='mysql+pymysql://report:report_pass@172.31.8.41/report'
+SQLALCHEMY_TRACK_MODIFICATIONS=False
