Use read oauth scope for instance get access

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -95,7 +95,7 @@ paths:
           schema:
             $ref:  "#/definitions/instance"
       security:
-       - oauth2: ['admin']
+       - oauth2: ['read']
     post:
       operationId: api.instance.put_instance
       tags:
