Added event as message type for status messages

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -99,6 +99,8 @@ definitions:
         description:  status message text
       message_type:
         type:         string
+        maxLength:    16
+        pattern:      '^([a-z]{4,10})$'
         description:  status message type
     required:
       - message
