--- a/api/api.yaml
+++ b/api/api.yaml
@@ -3,6 +3,7 @@ swagger: '2.0'
 info:
   description: UH-IaaS instance report API
   version: "1.3.1"
+  version: "1.4.0"
   title: UH-IaaS instance report API
 consumes:
   - "application/json"
