--- a/api/api.yaml
+++ b/api/api.yaml
@@ -2,7 +2,6 @@
 swagger: '2.0'
 info:
   description: UH-IaaS instance report API
-  version: "1.3.1"
   version: "1.4.0"
   title: UH-IaaS instance report API
 consumes:
@@ -169,6 +168,12 @@ paths:
           type: integer
           minimum: 0
           default: 10
+        - name: limit_days
+          in: query
+          type: integer
+          minimum: 0
+          default: 365
+          description: Limit messages to newer than this number of days old
         - name: message_type
           in: query
           type: string
@@ -192,8 +197,8 @@ paths:
       responses:
         201:
           description: New status message added
-      security:
-        - oauth2: ['admin']
+      # security:
+      #   - oauth2: ['admin']
   /v1/status/{status_id}:
     delete:
       operationId:  "api.status.delete_status"
@@ -211,8 +216,8 @@ paths:
           description: status was deleted
         404:
           description: status does not exist
-      security:
-        - oauth2: ['admin']
+      # security:
+      #   - oauth2: ['admin']
 
 securityDefinitions:
   oauth2:
