Restore securtiy for message api

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -197,8 +197,8 @@ paths:
       responses:
         201:
           description: New status message added
-      # security:
-      #   - oauth2: ['admin']
+      security:
+       - oauth2: ['admin']
   /v1/status/{status_id}:
     delete:
       operationId:  "api.status.delete_status"
