--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1,9 +1,9 @@
 ---
 swagger: '2.0'
 info:
-  description: UH-IaaS instance report API
-  version: "1.4.0"
-  title: UH-IaaS instance report API
+  description: NREC report API
+  version: "1.5.0"
+  title: NREC report API
 consumes:
   - "application/json"
 produces:
@@ -48,38 +48,40 @@ definitions:
       - ip
       - uptime
       - updates
+  owner:
+    type: object
+    description: instance owner information
+    properties:
+      admin:
+        type:         string
+        description:  project administrator
+        example:      'kari.normann@uib.no'
+      organization:
+        type:         string
+        description:  project administrator organization
+        example:      'uib'
+      project_name:
+        type:         string
+        description:  project name
+        example:      'uib-ita-application'
+      user:
+        type:         string
+        description:  instance creator
+        example:      'kari.normann@uib.no'
+      timestamp:
+        type:         string
+        format:       date-time
+        description:  time of last update
+        example:      '2018-09-04T12:45:00Z'
+        readOnly:     true
+      instance_id:
+        type:         string
+        description:  unique instance id
+        example:      f57589ac-5e46-4398-a592-9d8ac32f025f
   instance_with_owner:
     allOf:
       - $ref:  "#/definitions/instance"
-      - type: object
-        description: instance with owner information
-        properties:
-          admin:
-            type:         string
-            description:  project administrator
-            example:      'kari.normann@uib.no'
-          organization:
-            type:         string
-            description:  project administrator organization
-            example:      'uib'
-          project_name:
-            type:         string
-            description:  project name
-            example:      'uib-ita-application'
-          user:
-            type:         string
-            description:  instance creator
-            example:      'kari.normann@uib.no'
-          timestamp:
-            type:         string
-            format:       date-time
-            description:  time of last update
-            example:      '2018-09-04T12:45:00Z'
-            readOnly:     true
-          instance_id:
-            type:         string
-            description:  unique instance id
-            example:      f57589ac-5e46-4398-a592-9d8ac32f025f
+      - $ref:  "#/definitions/owner"
   status:
     type:             object
     description:      status message object
@@ -116,7 +118,7 @@ paths:
       operationId:  "api.instance.get_instances"
       tags:
         - Instance
-      summary:      "Get instance report"
+      summary:      "Get instance reports"
       description:  "Get the list of instances"
       parameters:
         - name: limit
@@ -132,7 +134,7 @@ paths:
           maxLength: 32
       responses:
         200:
-          description: "Successful read instance list operation"
+          description: "Successful read instance with owner report"
           schema:
             $ref:  "#/definitions/instance_with_owner"
       security:
@@ -155,6 +157,30 @@ paths:
           description: Successful updated instance with a new report
         201:
           description: Successful added instance with a new report
+  /v1/instance/{ip}:
+    get:
+      operationId:  "api.instance.get_instance"
+      tags:
+        - Instance
+      summary:      "Get instance owner information"
+      description:  "Get instance owner information"
+      parameters:
+        - name: ip
+          in: path
+          description:  private or public IPv4 address
+          type: string
+          format: ipv4
+          pattern:      '^(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3})$'
+          required:     true
+      responses:
+        200:
+          description: "Successful read instance owner"
+          schema:
+            $ref:  "#/definitions/owner"
+        404:
+          description: "Instance owner not found"
+      security:
+        - oauth2: ['read']
   /v1/status:
     get:
       operationId:  "api.status.get_status"
