new package version

--- a/package/Makefile
+++ b/package/Makefile
@@ -1,7 +1,7 @@
 NAME=report-app
-VERSION=1.5.0
+VERSION=1.6.0
 PACKAGE_VERSION=1
-DESCRIPTION="Simple REST API for himlar"
+DESCRIPTION="Simple REST API for NREC"
 URL="https://github.com/norcams/report-app"
 MAINTAINER="https://github.com/norcams"
 RELVERSION=7
