--- a/api/api.yaml
+++ b/api/api.yaml
@@ -223,8 +223,8 @@ paths:
       responses:
         201:
           description: New status message added
-#      security:
-#       - oauth2: ['admin']
+      security:
+        - oauth2: ['admin']
   /v1/status/rss:
     get:
       operationId:  "api.status.get_rss"
