--- a/package/Makefile
+++ b/package/Makefile
@@ -1,10 +1,10 @@
 NAME=report-app
-VERSION=1.6.3
+VERSION=2.0.0
 PACKAGE_VERSION=1
 DESCRIPTION="Simple REST API for NREC"
 URL="https://github.com/norcams/report-app"
 MAINTAINER="https://github.com/norcams"
-RELVERSION=7
+RELVERSION=8
 INSTALL_DIR=/opt/report-app
 
 .PHONY: default
@@ -19,11 +19,11 @@ clean:
 
 .PHONY: deps
 deps:
-	yum install -y gcc rpm-build centos-release-scl
-	yum install -y rh-ruby23 rh-ruby23-ruby-devel httpd-devel
-	source /opt/rh/rh-ruby23/enable; gem install -N fpm --version 1.11.0
-	yum install -y python python3-devel python-virtualenv git libyaml-devel
-
+	dnf module reset ruby -y
+	dnf install @ruby:2.7
+	dnf install -y gcc rpm-build ruby-devel httpd-devel
+	dnf install -N fpm #--version 1.11.0
+	dnf install -y python39 python39-devel python3-virtualenv
 
 .PHONY: build
 build:
@@ -32,23 +32,23 @@ build:
 
 	cd /vendor; git clone ${URL}
 	rsync -avh --exclude '.git' /vendor/${NAME}/ /installdir${INSTALL_DIR}
-	cd /installdir${INSTALL_DIR}; virtualenv --clear -p /bin/python3 .
-	cd /installdir${INSTALL_DIR}; bin/pip install -U setuptools
+	cd /installdir${INSTALL_DIR}; virtualenv --clear -p /bin/python3.9 .
+	#cd /installdir${INSTALL_DIR}; bin/pip install -U setuptools
 	cd /installdir${INSTALL_DIR}; bin/pip install -U pip
 
-	cd /installdir${INSTALL_DIR}; bin/python setup.py install
-	#cd /installdir${INSTALL_DIR}; bin/pip install -r requirements.txt
-	cd /installdir${INSTALL_DIR}; virtualenv --relocatable -p /bin/python3 .
+	#cd /installdir${INSTALL_DIR}; bin/python setup.py install
+	cd /installdir${INSTALL_DIR}; bin/pip install -r requirements.txt
+	cd /installdir${INSTALL_DIR}; virtualenv --relocatable -p /bin/python3.9 .
 	# Hack
 	# echo "${INSTALL_DIR}" > /installdir${INSTALL_DIR}/lib/python2.7/site-packages/report_api.egg-link
-	sed -i 's/\/installdir\/opt/\/opt/g' /installdir${INSTALL_DIR}/bin/activate
+	# sed -i 's/\/installdir\/opt/\/opt/g' /installdir${INSTALL_DIR}/bin/activate
 	# version file
 	cd  /vendor/${NAME}; echo "commit: `git log --pretty=format:'%h' -n 1`" > /installdir${INSTALL_DIR}/version.yaml
 	echo "version: ${VERSION}" >> /installdir${INSTALL_DIR}/version.yaml
 
 .PHONY: rpm
 rpm:
-	source /opt/rh/rh-ruby23/enable; fpm -s dir -t rpm \
+	fpm -s dir -t rpm \
 		-n $(NAME) \
 		-v $(VERSION) \
 		--iteration "$(PACKAGE_VERSION).el$(RELVERSION)" \
