feat: upgrade to newer connexion and cleanup app setup with separate pages and config

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-pip>=21.1
-setuptools>=65.5.1
+pip
 connexion
-swagger-ui-bundle
+connexion[flask]
+connexion[uvicorn]
+connexion[swagger-ui]
 Flask-SQLAlchemy
 Flask-Cors
 PyMySQL
 bcrypt
 pytz
 feedgen
-mod-wsgi
 tabulate
