feat: updated makefile and version

--- a/package/Makefile
+++ b/package/Makefile
@@ -1,5 +1,5 @@
 NAME=report-app
-VERSION=2.0.1
+VERSION=2.1.0
 PACKAGE_VERSION=1
 DESCRIPTION="Simple REST API for NREC"
 URL="https://github.com/norcams/report-app"
@@ -15,38 +15,36 @@ package: rpm
 .PHONY: clean
 clean:
 	rm -fr /installdir
+	rm -fr ${INSTALL_DIR}
 	rm -f $(NAME)-$(VERSION)-*.rpm
 	rm -Rf /vendor/
 
 .PHONY: deps
 deps:
 	dnf module reset ruby -y
-	dnf install -y @ruby:2.7
-	dnf install -y gcc rpm-build ruby-devel httpd-devel
+	dnf install -y @ruby:3.3
+	dnf install -y gcc rpm-build ruby-devel python3.11-devel
 	gem install -N fpm #--version 1.11.0
-	dnf install -y python39 python39-devel python3-virtualenv
 
 .PHONY: build
 build:
 	mkdir /vendor
-	mkdir -p /installdir${INSTALL_DIR}
+	mkdir -p ${INSTALL_DIR}
 
 	cd /vendor; git clone -b ${GIT_REF} ${URL}
-	rsync -avh --exclude '.git' /vendor/${NAME}/ /installdir${INSTALL_DIR}
-	cd /installdir${INSTALL_DIR}; virtualenv --clear -p /bin/python3.9 .
-	#cd /installdir${INSTALL_DIR}; bin/pip install -U setuptools
-	cd /installdir${INSTALL_DIR}; bin/pip install -U pip
-
-	#cd /installdir${INSTALL_DIR}; bin/python setup.py install
-	cd /installdir${INSTALL_DIR}; bin/pip install --upgrade pip
-	cd /installdir${INSTALL_DIR}; bin/pip install -r requirements.txt
-	cd /installdir${INSTALL_DIR}; virtualenv --relocatable -p /bin/python3.9 .
+	rsync -avh --exclude '.git' /vendor/${NAME}/ ${INSTALL_DIR}
+	cd ${INSTALL_DIR}; python3.11 -m venv .
+	cd ${INSTALL_DIR}; bin/pip install --upgrade pip
+	cd ${INSTALL_DIR}; bin/pip install -r requirements.txt
+	#cd /installdir${INSTALL_DIR}; virtualenv --relocatable -p /bin/python3.11 .
 	# Hack
 	# echo "${INSTALL_DIR}" > /installdir${INSTALL_DIR}/lib/python2.7/site-packages/report_api.egg-link
 	# sed -i 's/\/installdir\/opt/\/opt/g' /installdir${INSTALL_DIR}/bin/activate
 	# version file
-	cd  /vendor/${NAME}; echo "commit: `git log --pretty=format:'%h' -n 1`" > /installdir${INSTALL_DIR}/version.yaml
-	echo "version: ${VERSION}" >> /installdir${INSTALL_DIR}/version.yaml
+	cd  /vendor/${NAME}; echo "commit: `git log --pretty=format:'%h' -n 1`" > ${INSTALL_DIR}/version.yaml
+	echo "version: ${VERSION}" >> ${INSTALL_DIR}/version.yaml
+	mkdir -p /installdir/opt
+	cp -R ${INSTALL_DIR} /installdir/opt/
 
 .PHONY: rpm
 rpm:
